force-app/main/default/objects/Purchase_Order__c/fields/BookName__c.field-meta.xml
<CustomField>
    <fullName>BookName__c</fullName>
    <label>Book Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>