force-app/main/default/objects/Purchase_Order__c/fields/BuyerName__c.field-meta.xml
<CustomField>
    <fullName>BuyerName__c</fullName>
    <label>Buyer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>