force-app/main/default/objects/Purchase_Order__c/fields/Fetch_MRR__c.field-meta.xml
<CustomField>
    <fullName>Fetch_MRR__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; &quot;lightning/cmp/vlocity_cmt__vlocityLWCOmniWrapper?c__target=c:aRTLInvokeERPEnglish&amp;c__layout=lightning&amp;c__tabIcon=custom:custom18&amp;c__poRecordId=&quot; + Id + &quot;&amp;c__operatingUnit=&quot; + Id + &quot;&amp;c__activityAction=&quot; + &quot;MrrDetails&quot; + &quot;&amp;c__consumerTransactionId=&quot; + Id + &quot;&amp;c__orderId=&quot; + MasterOrder__c + &quot;&amp;c__poNumber=&quot; +  PONumber__c  , &quot;Fetch MRR&quot; ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fetch MRR</label>
    <type>Text</type>
</CustomField>