force-app/main/default/objects/Purchase_Order__c/fields/HeaderId__c.field-meta.xml
<CustomField>
    <fullName>HeaderId__c</fullName>
    <label>Header Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>