force-app/main/default/objects/Purchase_Order__c/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <label>Item Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>