force-app/main/default/objects/Purchase_Order__c/fields/MasterOrder__c.field-meta.xml
<CustomField>
    <fullName>MasterOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>