force-app/main/default/objects/Purchase_Order__c/fields/PRID__c.field-meta.xml
<CustomField>
    <fullName>PRID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PR Id</label>
    <referenceTo>ARTL_Purchase_Request__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>