force-app/main/default/objects/Purchase_Order__c/fields/RequisitionNumber__c.field-meta.xml
<CustomField>
    <fullName>RequisitionNumber__c</fullName>
    <label>Requisition Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>