force-app/main/default/objects/Purchase_Order__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>PO Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>