force-app/main/default/objects/Purchase_Order__c/fields/StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>StatusDescription__c</fullName>
    <label>Status Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>