force-app/main/default/objects/Purchase_Order__c/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <label>Supplier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>