force-app/main/default/objects/Purchase_Order__c/fields/SupplierSite__c.field-meta.xml
<CustomField>
    <fullName>SupplierSite__c</fullName>
    <label>Supplier Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>